src/assets/main.css
@import 'tailwindcss';

/***************************************
Global Styles
*****************************************/

html {
  scroll-behavior: smooth;
  color-scheme: light dark;
}

body {
  max-width: 1500px;
  margin-inline: auto;
  padding-inline: 1rem;
}

@media (width >= 768px) {
  body {
    padding-inline: 2rem;
  }
}

@media (width >= 1024px) {
  body {
    padding-inline: 5rem;
  }
}

@media (forced-colors: active) {
  * {
    forced-color-adjust: none;
  }
}

/***************************************
Tailwind Variables
*****************************************/

@theme {
  /* Fonts */
  --font-main: 'Work Sans', serif;
  --font-special: 'Rammetto One', serif;

  /* Colors */
  --color-pink: #e9404f;
  --color-blue: #1ca9e6;
  --color-dark: #0f0f0f;
  --color-light: #f7f7f7;
  --color-copy: #333333;

  --breakpoint-xs: 425px;
}

/***************************************
Reusable Custom Classes
*****************************************/

body {
  @apply bg-light text-copy transition-colors;
}

.dark body {
  @apply bg-dark text-white;
}

.flex-row-center {
  @apply flex items-center justify-evenly;
}

.flex-col-center {
  @apply flex flex-col items-center justify-center;
}

.nav-list-styles {
  @apply flex flex-col items-center;
}

.nav-btn-styles {
  @apply border px-3 py-1 rounded-sm hover:cursor-pointer transition-all duration-300;
}

.pink-bold-letter {
  @apply text-pink font-bold;
}

.blue-bold-letter {
  @apply text-blue font-bold;
}

.section-header-wrapper {
  @apply mt-4 mb-2 flex flex-col w-full md:flex-row md:justify-between md:items-center;
}

/***************************************
Navbar Styles
*****************************************/

.back-top-btn {
  @apply font-special fixed bottom-24 md:bottom-10 right-6 md:right-10 px-3 py-1 rounded-md z-50 border border-dotted transition opacity-50 hover:bg-gray-300/10 hover:opacity-100 hover:cursor-pointer duration-300 text-3xl;
}

/***************************************
Navbar Styles
*****************************************/
.nav-container-styles {
  @apply hidden font-main  md:flex md:justify-between md:items-center  md:mt-4;
}

.nav-name-wrapper {
  @apply gap-1 text-2xl ml-2  lg:text-3xl;
}

.nav-btn-wrapper {
  @apply flex flex-col gap-2 items-center lg:flex-row;
}

/***************************************
Sidebar Styles
*****************************************/
.menu-hover {
  @apply absolute -translate-x-1/2 top-full text-sm bg-pink text-light p-2 rounded opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap z-50;
}

.side-items {
  @apply mb-4 hover:cursor-pointer hover:scale-125 transition-all duration-200 ease-linear;
}

.side-close-btn {
  @apply mt-8 text-2xl w-full hover:rotate-180 transition-all duration-300 hover:cursor-pointer;
}

/***************************************
Hero Styles
*****************************************/

.hero-title {
  @apply font-special font-black text-3xl text-nowrap  sm:text-4xl lg:text-5xl lg:mb-2 2xl:text-6xl;
}

.hero-btn-wrapper-md {
  @apply hidden md:flex md:justify-between md:mt-8 lg:w-[400px];
}

.hero-cta-btn {
  @apply bg-pink tracking-wider px-6 py-2 rounded-lg hover:cursor-pointer text-light duration-100 transition-all ease-linear hover:rounded-2xl relative;
}

.hover-btn-styles {
  @apply hover:bg-pink hover:text-white hover:cursor-pointer;
}

.img-caption-pink {
  @apply text-pink  rounded-sm mt-2 text-center font-bold md:text-xl;
}

.img-caption-blue {
  @apply text-blue text-center mt-2 rounded-sm font-bold md:text-xl;
}

/***************************************
Home Projects Styles
*****************************************/
.home-projects-container {
  @apply flex flex-col items-center justify-center gap-6 mt-8 md:grid md:grid-cols-2 lg:gap-16;
}

.featured-title {
  @apply font-bold  tracking-wider rounded-sm mx-auto mb-2 w-fit px-4 py-1 md:-top-3 md:z-10 md:absolute md:left-1/2 md:-translate-x-1/2;
}

/***************************************
Home Footer Styles
*****************************************/
.link-card-wrapper {
  @apply grid grid-cols-2 gap-4 md:grid-cols-3 lg:grid-cols-4;
}

/***************************************
Contact Modal Styles
*****************************************/
.contact-modal-container {
  @apply fixed inset-0 z-50 flex flex-col justify-center items-center bg-dark/95 font-main;
}

.contact-form-wrapper {
  @apply w-[90vw] mx-auto bg-light py-8 rounded-xl text-dark md:w-4/5  md:max-w-2xl md:px-8 md:py-16 relative;
}

.contact-modal-title {
  @apply text-center text-4xl mb-4 font-special text-light;
}

.contact-info-wrapper {
  @apply flex justify-center items-center flex-col gap-2;
}

.contact-info-item {
  @apply text-center flex flex-col justify-center items-center text-dark;
}

.form-wrapper {
  @apply px-4 flex justify-center items-start flex-col gap-2 w-full;
}

.form-input {
  @apply w-full rounded-sm py-1 pl-1 mb-3 bg-blue/10 shadow-sm placeholder:text-dark;
}

.form-send-btn {
  @apply mt-2 rounded-sm w-full bg-pink px-6 py-1  text-light hover:cursor-pointer hover:saturate-90 hover:tracking-wide transition-all duration-150;
}

.form-close-btn {
  @apply mx-auto w-fit text-pink opacity-75 absolute top-4 right-8 text-xl font-special md:right-12 md:text-2xl hover:opacity-100 transition-all duration-150  hover:scale-110 hover:cursor-pointer;
}

/***************************************
Personal View Styles
*****************************************/
.personal-sect-title {
  @apply text-4xl mb-2 text-center md:text-start font-bold  font-special;
}

.personal-copy {
  @apply mb-2 text-sm md:text-base;
}

.personal-img-wrapper {
  @apply grid grid-cols-2 gap-4 md:grid-cols-4;
}

/***************************************
Back Home Button Styles
*****************************************/
.component-wrapper {
  @apply border-t border-slate-400 mt-12 pt-6 text-center;
}

.back-home-btn {
  @apply bg-pink text-white px-5 py-2 rounded-sm text-sm inline-block hover:cursor-pointer hover:shadow-lg transition;
}

/***************************************
Case Outcome Styles
*****************************************/

.outcome-card-wrapper {
  @apply mt-4 grid grid-cols-1 md:grid-cols-2 gap-4;
}

/***************************************
Case Overview Styles
*****************************************/
.overview-title {
  @apply text-2xl text-center md:text-3xl;
}

.overview-content-wrapper {
  @apply text-pink font-semibold flex items-start justify-center flex-wrap text-center text-sm gap-2 mt-2 mb-4 divide-x divide-gray-300;
}

.overview-info {
  @apply md:mt-8 md:gap-4 lg:gap-8 lg:grid lg:grid-cols-2 lg:place-items-center;
}

.overview-img {
  @apply w-3/4 sm:w-1/2 max-w-xl mx-auto mb-4 md:mb-0 md:rounded-md lg:max-w-[450px] lg:w-full shadow-xl;
}

.case-study-btn {
  @apply bg-pink text-white pr-4 pl-2 py-1 rounded-sm mb-2 text-sm inline-block hover:shadow-lg transition;
}

/***************************************
Case Problem Styles
*****************************************/
.problem-header-wrapper {
  @apply border-pink border-2 p-4 rounded-md mt-4 mb-8;
}

.problem-left-btn {
  @apply text-5xl absolute top-2/3 -left-4 transform -translate-y-1/2  ml-3  opacity-25 transition-all duration-300 md:text-6xl hover:scale-150 hover:opacity-100 hover:cursor-pointer;
}

.problem-right-btn {
  @apply text-5xl absolute -right-4 top-2/3 transform -translate-y-1/2  mr-3 opacity-25 hover:scale-150 transition-all duration-300 md:text-6xl hover:opacity-100 hover:cursor-pointer;
}

.problem-quote {
  @apply text-xl my-16 font-bold text-pink font-special uppercase mb-2 text-center lg:text-2xl lg:my-24;
}

.problem-img-modal {
  @apply fixed inset-0 z-50 bg-dark/95 flex items-center justify-center;
}

.problem-modal-close-btn {
  @apply absolute -top-10 right-8 text-white bg-pink px-3 py-1 rounded hover:bg-pink/80 hover:cursor-pointer;
}

/***************************************
Sticky Nav Styles
*****************************************/
.sticky-nav-container {
  @apply mt-8 mb-8 sticky top-3 z-50 bg-pink py-2 rounded-sm font-main;
}

.sticky-content-wrapper {
  @apply flex flex-wrap items-center justify-around gap-4;
}

/***************************************
Ux Lens Styles
*****************************************/
.ux-header-wrapper {
  @apply text-center sm:text-left mb-4 before:block before:w-24 before:h-3 before:mb-5 before:rounded-md before:mx-auto sm:before:mx-0 before:dark:bg-pink;
}

.ux-slot-wrapper {
  @apply col-span-12 space-y-12 relative px-4 sm:col-span-8 sm:space-y-8 sm:before:absolute sm:before:top-2 sm:before:bottom-0 sm:before:w-0.5 sm:before:-left-3 before:dark:bg-gray-300;
}

/***************************************
Link Card Styles
*****************************************/
.link-card-container {
  @apply rounded-md p-4 font-main flex flex-col justify-center items-center w-full mt-8 border border-gray-200 h-60;
}

.link-card-btn {
  @apply text-sm border-2 border-pink p-2 rounded-sm tracking-widest hover:bg-pink hover:text-white hover:cursor-pointer;
}

/***************************************
Project Card Styles
*****************************************/
.project-card-container {
  @apply relative px-4 py-4 border border-gray-300 rounded-md;
}

.project-type {
  @apply text-pink font-bold;
}

.project-title {
  @apply font-bold text-2xl;
}

/***************************************
Tailwind Custom Classes - Blog
*****************************************/
.blog-title {
  @apply text-3xl font-bold font-main mb-4;
}

.blog-paragraphs {
  @apply indent-4 mb-2;
}

.blog-sect-title {
  @apply font-bold underline;
}

